add playground photo

--- a/frontend/html/playground.html
+++ b/frontend/html/playground.html
@@ -38,6 +38,9 @@
     </div>
 
     <div class="playground-content">
+        <div class="picture-slider">
+            <img class="" src="../../resources/pictures/stefan_genev.png">
+        </div>
         <div class="upload-btn-wrapper">
             <button class="btn"></button>
             <input type="file" name="myfile" accept="image/*"/>
