--- a/backend/src/main/resources/registration_success_email.html
+++ b/backend/src/main/resources/registration_success_email.html
@@ -67,6 +67,7 @@
             width: 24px;
             height: 24px;
             vertical-align: middle;
+            margin-bottom: 20px;
         }
     </style>
 </head>
