--- a/backend/src/main/resources/registration_success_email.html
+++ b/backend/src/main/resources/registration_success_email.html
@@ -79,7 +79,7 @@
     <h1>Успешна регистрация</h1>
     <p>Здравейте,</p>
     <p>Благодарим Ви, че се регистрирахте в kidsground.bg. Вашият профил беше успешно създаден.</p>
-    <p>Вече можете да създавате площадки и да добавяте ревюта, като така допринасяте за изграждането на нашата платформа.</p>
+    <p>Вече можете да отбелязвате площадки и да добавяте ревюта, като така допринасяте за изграждането на нашата платформа.</p>
     <a href="https://kidsground.bg/login" class="button">Влезте в профила си</a>
     <p>Ако имате въпроси или се нуждаете от помощ, не се колебайте да се свържете с нас.</p>
     <p>С уважение,<br>Екипът на kidsground.bg</p>
