added semantic html

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,18 +6,11 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="KIDSground е инициатива 
+  <meta name="description" content="Kidsground е инициатива 
       за създаване на дигитална 
       карта на всички известни 
       и неизвестни детски 
-      площадки в България, 
-      като по този начин 
-      стимулира изграждането 
-      на единна онлайн 
-      платформа с вида, 
-      местоположението и състоянието 
-      на детските площадки в
-      града." />
+      площадки в България." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
