added more meta tags for seo optimisation

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,28 +6,36 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Kidsground е инициатива 
-      за създаване на дигитална 
-      карта на всички известни 
-      и неизвестни детски 
-      площадки в България." />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  <title>Kidsground</title>
+  <!-- SEO Optimized Meta Description -->
+  <meta name="description"
+    content="KidsGround е интерактивна карта на детските площадки в България. Намерете близки детски кътове, игрища и забавления за деца. Подходящо за семейства и родители. KidsGround, KidzGround, детска площадка, playground Bulgaria." />
+
+  <!-- SEO Keywords (Optional) -->
+  <meta name="keywords"
+    content="детски площадки, детска карта, детски кът, игрище, семейни забавления, деца, playground, Bulgaria, KidsGround, KidzGround" />
+
+  <!-- Social Media Open Graph Tags -->
+  <meta property="og:title" content="KidsGround - Карта на детските площадки в България" />
+  <meta property="og:description"
+    content="KidsGround помага на родители и деца да откриват детски площадки и игрища в България. Намерете най-близкото място за игра." />
+  <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
+  <meta property="og:url" content="https://kidsground.bg" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card for Social Media -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="KidsGround - Детски площадки в България" />
+  <meta name="twitter:description"
+    content="KidsGround предлага интерактивна карта на всички детски площадки в България. Открийте най-близкото място за игра." />
+  <meta name="twitter:image" content="%PUBLIC_URL%/preview.png" />
+
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <title>KidsGround - Детски площадки в България</title>
 </head>
+
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
